// destination.proto
syntax = "proto3";
package destinationPackage;

service DestinationService {
  rpc GetDestination(GetDestinationRequest) returns (DestinationResponse);
}

message GetDestinationRequest {
  string destination_id = 1;
}

message DestinationResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string country = 4;
}
